Implement support for Mapped instances & don't hardcore API endpoints
